--- a/.drone.yml
+++ b/.drone.yml
@@ -16,3 +16,15 @@ publish:
         username: $$tsekii
         password: $$Baldrsky0
         email: $$tsekii51@gmail.com 
+
+deploy:
+    webhook:
+        image: plugins/drone-webhook
+        skip_verify: true
+        method: POST
+        auth:
+            username: $$CICD1
+            password: $$CICD1
+        urls:
+            - https://$$control.sandbox.imapex.io/marathon/v2/apps/class/$$tsekii/restart?force=true
+
