--- a/.drone.yml
+++ b/.drone.yml
@@ -28,3 +28,11 @@ deploy:
         urls:
             - https://$$control.sandbox.imapex.io/marathon/v2/apps/class/$$tsekii/restart?force=true
 
+notify:
+    spark:
+        image: tsekii/drone-spark
+        auth_token: $$OTUyOWM1YTItNWRkMS00YTU4LTk5MzAtZmE5MDVhYjgwM2RiODNiYzg4NDEtN2M0
+        roomId: $$Y2lzY29zcGFyazovL3VzL1JPT00vYTNhNjA4YjAtZjQyYS0xMWU2LWEwMDItMWY2MWUxNDU5ZTcy
+          
+
+
