--- a/.drone.yml
+++ b/.drone.yml
@@ -9,4 +9,12 @@ build:
 	commands:
 	    - pip install -r requirements.txt
 	    - python testing.py
+publish:
+    docker:
+        repo: $$tsekii/cicd_demoapp
+        tag: latest
+        username: $$tsekii
+        password: $$Baldrsky0
+        email: $$tsekii51@gmail.com 
+
 
