Added Deploy phase to restart application

--- a/.drone.yml
+++ b/.drone.yml
@@ -17,4 +17,17 @@ publish:
         password: $$Baldrsky0
         email: $$tsekii51@gmail.com 
 
+deploy:
+    webhook:
+        image: plugins/drone-webhook
+        skip_verify: true
+        method: POST
+        auth:
+            username: $$CICD1
+            password: $$CICD1
+        urls:
+            - https://$$control.sandbox.imapex.io/marathon/v2/apps/class/$$tsekii/restart?force=true
+
+
+
 
